Lab Python: 2a parte

--- a/reduc-operation-alumno21.ipynb
+++ b/reduc-operation-alumno21.ipynb
@@ -10,43 +10,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "496946fa-2a28-4c1d-8a6a-2ee0b8fd8ced",
+   "execution_count": null,
+   "id": "8fe64c77-ba46-4410-a842-fdef84b23a3b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[A.1] Tiempo con bucle for en lista: 0.447293 segundos\n",
-      "[A.2] Tiempo con función sum en lista: 0.032065 segundos\n",
-      "[B.1] Tiempo con bucle for en array de NumPy: 0.895218 segundos\n",
-      "[B.2] Tiempo con numpy.sum: 0.003520 segundos\n",
-      "\n",
-      "[Resultados y conclusiones]\n",
-      "- Código original: Operación poco optimizada usando un bucle for.\n",
-      "- Listas:\n",
-      "  - Bucle for: Método más lento que sum.\n",
-      "  - Función sum: Más rápida debido a su implementación optimizada.\n",
-      "- NumPy:\n",
-      "  - Bucle for: Similar en tiempo al uso de listas.\n",
-      "  - numpy.sum: Mucho más rápido, aprovechando la vectorización.\n",
-      "Conclusión: NumPy es la mejor opción para cálculos científicos de alto rendimiento.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Importamos las librerías necesarias\n",
     "import time\n",
     "import numpy as np\n",
+    "from numba import njit\n",
+    "import sys \n",
     "\n",
     "# ===========================================\n",
     "# A) Operación de Reducción con Listas\n",
     "# ===========================================\n",
     "\n",
-    "# Creación de una lista de Python\n",
-    "value = 10**6\n",
+    "# Recibimos el valor desde la línea de comandos, con un valor por defecto de 10^6 si no se especifica\n",
+    "value = int(sys.argv[1]) if len(sys.argv) > 1 else 10**6\n",
     "python_list = list(range(value))\n",
+    "\n",
+    "# Creación de una lista de Python\n",
+    "#value = 10**6\n",
+    "#python_list = list(range(value))\n",
     "\n",
     "# Suma utilizando un bucle for\n",
     "start_time = time.time()\n",
@@ -84,27 +68,46 @@
     "print(f\"[B.2] Tiempo con numpy.sum: {end_time - start_time:.6f} segundos\")\n",
     "\n",
     "# ===========================================\n",
-    "# C) Explicación de Resultados\n",
+    "# C) Numba Optimización\n",
     "# ===========================================\n",
     "\n",
-    "print(\"\\n[Resultados y conclusiones]\")\n",
-    "print(\"- Código original: Operación poco optimizada usando un bucle for.\")\n",
-    "print(\"- Listas:\")\n",
-    "print(\"  - Bucle for: Método más lento que sum.\")\n",
-    "print(\"  - Función sum: Más rápida debido a su implementación optimizada.\")\n",
-    "print(\"- NumPy:\")\n",
-    "print(\"  - Bucle for: Similar en tiempo al uso de listas.\")\n",
-    "print(\"  - numpy.sum: Mucho más rápido, aprovechando la vectorización.\")\n",
-    "print(\"Conclusión: NumPy es la mejor opción para cálculos científicos de alto rendimiento.\")\n"
+    "# Decorador @njit para optimizar la suma\n",
+    "@njit\n",
+    "def sum_with_numba(array):\n",
+    "    total = 0\n",
+    "    for num in array:\n",
+    "        total += num\n",
+    "    return total\n",
+    "\n",
+    "# Suma utilizando el decorador Numba\n",
+    "start_time = time.time()\n",
+    "total_sum_array_numba = sum_with_numba(numpy_array)\n",
+    "end_time = time.time()\n",
+    "print(f\"[C.1] Tiempo con Numba en array de NumPy: {end_time - start_time:.6f} segundos\")\n",
+    "\n",
+    "# Suma utilizando la función numpy.sum (sin Numba)\n",
+    "start_time = time.time()\n",
+    "total_sum_array_sum_numba = np.sum(numpy_array)\n",
+    "end_time = time.time()\n",
+    "print(f\"[C.2] Tiempo con numpy.sum (sin Numba): {end_time - start_time:.6f} segundos\")\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c6faf2a-6986-4023-be66-672c3be5d193",
+   "cell_type": "markdown",
+   "id": "e82842a0-be5f-49f7-9217-77ca7959dc10",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Explicación de los resultados obtenidos con Numba\n",
+    "\n",
+    "- **`Numba con bucle for`**:\n",
+    "  - El decorador `@njit` de Numba optimiza el bucle `for` considerablemente, lo que reduce los tiempos de ejecución en comparación con la ejecución normal del bucle. Numba compila el código en tiempo de ejecución, lo que mejora el rendimiento, especialmente en operaciones que implican bucles pesados.\n",
+    "  \n",
+    "- **`Numba vs. numpy.sum`**:\n",
+    "  - La función `numpy.sum` está escrita en C y es altamente optimizada para la ejecución, lo que le permite ser más rápida que un bucle `for` incluso con Numba. Sin embargo, al usar Numba, el rendimiento de los bucles también mejora significativamente, acercándose al de `numpy.sum`.\n",
+    "\n",
+    "- **Conclusión**:\n",
+    "  - Numba es una excelente herramienta para acelerar funciones personalizadas de Python que implican bucles, especialmente cuando no se dispone de una solución optimizada como `numpy.sum`. Sin embargo, para cálculos en arrays, `numpy.sum` sigue siendo la opción más eficiente.\n"
+   ]
   }
  ],
  "metadata": {
